# modern-cmake-proj

./: .gitignore  CMakeLists.txt  README.md
cmake/: CTestCustom.cmake.in  FetchRapidJSON.cmake  JSONUtilsConfig.cmake
include/jsonutils/: json_utils.h
src/: file_utils.h  json_utils.cpp
test/: CMakeLists.txt
test/src/: test_main.cpp
